atualizando as linhas de código por métodos próprios do java 21